# tracepipe-pipelines

./: .gitignore  .gitmodules  AGENTS.md  README.md  dataset-manifest-1.csv  dataset-manifest-2.csv  main.py
.github/workflows/: notify-parent.yml  sync-docs-submodule.yml
action_extraction/: .env.example  AGENTS.md  README.md  pyproject.toml
action_extraction/action_extraction/: __init__.py  common.py  extraction.py  integration.py  parameter_extraction.py  schemas.py  window_classification.py
action_extraction/action_extraction/window_classification/: window_classification_prompt.md
action_extraction/action_extraction/window_classification/clients/: azure_client.py  client_factory.py  client_protocol.py  openrouter_client.py  vertex_client.py
action_extraction/config/: extraction.yaml  integration.yaml  parameter_extraction.yaml  pipeline.yaml  window_classification.yaml
action_extraction/tests/: __init__.py  conftest.py
action_extraction/tests/fixtures/: valid_input.json  valid_screenshot.json
action_extraction/tests/unit/: __init__.py  test_extraction.py
evaluations/: README.md  pyproject.toml
evaluations/src/: main.py
evaluations/src/config/: __init__.py  settings.py
